--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                     <span class="icon-left">
                                         <i class="fa fa-phone"></i>
                                     </span>
-                                    (91) 98395-4343
+                                    (91) 98xxx-xxxx
                                 </a>
                             </div>
                         </div>
@@ -194,18 +194,20 @@
                         </a>                        
                         <a id="menu-churrasco" class="btn btn-white btn-sm mr-3" onclick="cardapio.metodos.obterItensCardapio('churrasco')">
                             <i class="	fas fa-bread-slice"></i>&nbsp; Pão
-                        </a>                        
+                        </a> 
+                        <!--                    
                         <a id="menu-sobremesas" class="btn btn-white btn-sm mr-3" onclick="cardapio.metodos.obterItensCardapio('sobremesas')">
                             <i class="fa-solid fa-briefcase"></i>&nbsp; Combos
-                        </a>                        
+                        </a>  
+                        -->                      
                         <a id="menu-bebidas" class="btn btn-white btn-sm mr-3" onclick="cardapio.metodos.obterItensCardapio('bebidas')">
                             <i class="fas fa-solid fa-mug-hot"></i>&nbsp; Bebidas
                         </a>
+                        <!---
                         <a id="menu-steaks" class="btn btn-white btn-sm mr-3" onclick="cardapio.metodos.obterItensCardapio('steaks')">
                             <i class="fas fa-mortar-pestle"></i>&nbsp; Sopa
-                        </a>                     
-
-                       
+                        </a>  
+                        -->                  
                         
                     </div>
 
