--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg pl-0 pr-0 col-one">
                     <a class="navbar-brand wow fadeIn" href="#">
-                        <img src="./img/logoHuth1.png" width="160" class="img-logo" />
+                        <img src="./img/logoRuth2.png" width="160" class="img-logo" />
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
                         <span class="navbar-toggler-icon">
@@ -237,7 +237,7 @@
                     <div class="col-5 no-mobile text-center">
                         <div class="card-depoimentos wow fadeIn"></div>
                         <div class="d-flex img-banner wow fadeInLeft delay-02s">
-                            <img src="./img/logoHuth2.png" />
+                            <img src="./img/logoRuth3.png" />
                         </div>
                     </div>
 
@@ -376,7 +376,7 @@
                 <div class="row">
 
                     <div class="col-12 col-lg-3 col-md-3 col-sm-12 col-one container-logo-footer wow fadeIn">
-                        <img class="logo-footer" src="./img/logoHuth1.png" />
+                        <img class="logo-footer" src="./img/logoRuth2.png" />
                     </div>
 
                     <div class="col-12 col-lg-6 col-md-6 col-sm-12 col-one container-texto-footer wow fadeIn">
